# slayer

./: .gitattributes  .gitignore  .gitmodules  CmakeLists.txt  README.md
Examples/Pong/: CmakeLists.txt
Examples/Pong/assets/: pack.slp
Examples/Pong/include/: GameTypesDecl.h  Pong.h  SandboxCamera.h  StaticCamera.h
Examples/Pong/src/: Pong.cpp  SandboxCamera.cpp  StaticCamera.cpp
Scripts/: build.bat  setup.bat
Slayer/: CmakeLists.txt
Slayer/include/: Slayer.h  Utils.h
Slayer/include/Core/: Application.h  Containers.h  Core.h  Engine.h  Event.h  Events.h  Layer.h  Log.h  Main.h  Math.h  Singleton.h  Window.h
Slayer/include/Input/: Input.h  Keys.h
Slayer/include/Jobs/: Job.h  JobManager.h  JobPool.h  JobQueue.h  JobSystem.h  ThreadManager.h  Worker.h
Slayer/include/Physics/: Body.h  ColliderRenderingSystem.h  CollisionShapes.h  ContactSystem.h  Debug.h  Helpers.h  Layers.h  (+3 more)
Slayer/scripts/: generate_headers.py
Testbed/: CmakeLists.txt  imgui.ini  settings.yml
Testbed/assets/: Mat_default.material  OldDefaultSkybox.hdr  default_imgui.ini  pack.slp  saved.yml  scene.yml  sponza.yml
Testbed/include/: Components.h  GameTypesDecl.h  SandboxCamera.h  Testbed.h
Testbed/src/: SandboxCamera.cpp  Testbed.cpp
Tests/: .env  CmakeLists.txt  ecs.cpp  serialization.cpp
Tools/: buildpack.bat  cli.py  common.py  new_class.py  peek.bat  requirement.txt  requirements.txt  test_bindings.py
Tools/Resources/: gen_skybox.py  inv_textures.py  load.py  mask_split.py  packbuilder.py  process_animation.py
Tools/lib/: .gitignore  CMakeLists.txt  module.cpp
(+180 files in other folders)
